<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dialog_properties_title">Properties</string>
    <string name="bookmark">Bookmark</string>
    <string name="dialog_properties_size">Size:</string>
    <string name="dialog_properties_path">Path:</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_select_same_type">Select Same Type</string>
    <string name="accessibility_cancel_selection">Cancel selection</string>
    <string name="accessibility_drawer_toggle_btn_close">Close navigation drawer</string>
    <string name="accessibility_drawer_toggle_btn_open">Open navigation drawer</string>
    <string name="accessibility_list_menu_button">%1$s Options</string>
    <string name="accessibility_toolbar_btn_back">Go back</string>
    <string name="accessibility_toolbar_btn_delete_url">Clear input</string>
    <string name="accessibility_toolbar_multi_select">%1$s selected</string>
    <string name="accessibility_toolbar_screen_position">"%1$s selected.  Options available near top of the screen"</string>
    <string name="app_name">Knife</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask">Ask</string>
    <string name="bookmark_no_exists">Can\'t find the directory marked by the bookmark</string>
    <string name="bookmark_action_bar_close">Menu</string>
    <string name="channel_name_directory">Files</string>
    <string name="delete">Delete</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="dialog_delete_message">Are you sure delete %1$s ?</string>
    <string name="dialog_delete_task">Are you sure you want delete the task %1$s ?</string>
    <string name="dialog_delete_title">Ask</string>
    <string name="dialog_rename_title">Rename File</string>
    <string name="directory_description">%1$d items</string>
    <string name="directory_no_results">No files found</string>
    <string name="directory_search">Search your files</string>
    <string name="directory_ui_empty">No files here</string>
    <string name="download_manager_list_item_description" translatable="false">%1$s • %2$s</string>
    <string name="download_manager_ui_empty">No downloads here</string>
    <string name="download_notification_cancel_button">Cancel</string>
    <string name="download_notification_completed">Download complete</string>
    <string name="download_notification_failed">Download failed</string>
    <string name="download_notification_pause_button">Pause</string>
    <string name="download_notification_paused">Download paused</string>
    <string name="download_notification_pending">Download pending…</string>
    <string name="download_notification_resume_button">Resume</string>
    <string name="download_notification_retry">On the %1$s retry</string>
    <string name="download_started">Downloading…</string>
    <string name="download_title">Download</string>
    <string name="hide_info">Hide Info</string>
    <string name="menu_create_new_directory">New Directory</string>
    <string name="menu_download_tools">Download Tools</string>
    <string name="menu_internal_storage">Internal Storage</string>
    <string name="menu_connect_pc">Connect PC</string>
    <string name="menu_sort">Sort by</string>
    <string name="message_success_insert_download_task">Successfully added the download task \n%1$s\n from the clipboard.</string>
    <string name="notification_touch_for_details">Tap to view details</string>
    <string name="properties">Properties</string>
    <string name="remaining_duration_days">%1$d days left</string>
    <string name="remaining_duration_hours">%1$d hours left</string>
    <string name="remaining_duration_minutes">%1$d mins left</string>
    <string name="remaining_duration_one_day">1 day left</string>
    <string name="remaining_duration_one_hour">1 hour left</string>
    <string name="remaining_duration_one_minute">1 min left</string>
    <string name="remaining_duration_one_second">1 sec left</string>
    <string name="remaining_duration_seconds">%1$d secs left</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="select_items">Select items</string>
    <string name="share">Share</string>
    <string name="extract">Extract...</string>
    <string name="format_file_name">Format FileName</string>
    <string name="share_link_title">Share</string>
    <string name="copy_content">复制内容</string>
    <string name="dialog_title_delete">删除</string>
    <string name="show_info">Show Info</string>
    <string name="sort_date">By date modified</string>
    <string name="sort_name">By name</string>
    <string name="copy_file_name">Copy FileName</string>
    <string name="add_to_archive">Add To Archive</string>
    <string name="sort_by_ascending">By Ascending</string>
    <string name="sort_by_descending">By Descending</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exo_track_resolution"><xliff:g example="1024" id="width">%1$d</xliff:g> × <xliff:g example="768" id="height">%2$d</xliff:g></string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_bitrate"><xliff:g example="5.2" id="bitrate">%1$.2f</xliff:g> Mbps</string>
    <string name="exo_item_list"><xliff:g example="apple, pear" id="list">%1$s</xliff:g>, <xliff:g example="banana" id="item">%2$s</xliff:g></string>
    <string name="dialog_message_delete_video_file">Are you sure delete "%1$s"?</string>
    <string name="sort_size">By size</string>
    <string name="trim_video">Trim Video</string>
    <string name="selection_mode_menu_group">Selection Menu Group</string>
    <string name="selection_mode_copy_menu_id">Copy Selected</string>
    <string name="selection_mode_cut_menu_id">Cut Selected</string>
    <string name="selection_mode_delete_menu_id">Delete Selected</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_same_type">Select Same Types</string>
    <string name="normal_menu_group">Normal Group</string>
    <string name="search_menu_id">Search Menu</string>
    <string name="bookmark_menu_id">Bookmark Menu</string>
    <string name="sort_menu_id">Sort Menu</string>
    <string name="action_sort_by_date">Sort By Date</string>
    <string name="action_sort_by_name">Sort By Name</string>
    <string name="action_sort_by_size">Sort By Size</string>
    <string name="action_sort_by_ascending">Sort By Ascending</string>
    <string name="action_sort_by_descending">Sort By Descending</string>
    <string name="close_menu_id">Show Bottom Menu</string>
    <string name="action_remove_empty_folders">Remove Empty Folders</string>
    <string name="action_calculate_directory">Calculate Directory Size</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_move_images">Trim Video</string>
    <string name="action_move_files">Move File By Type</string>
    <string name="action_rename_by_regex">Rename File with Regular Expression</string>
    <string name="action_copy_directory_structure">Copy Directory Structure</string>
    <string name="action_combine_files">Combine Text Files</string>
    <string name="action_settings">Settings</string>
</resources>