<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/selection_mode_menu_group"
        android:visible="false">
        <item
            android:id="@+id/selection_mode_copy_menu_id"
            android:icon="@drawable/ic_stat_content_copy"
            android:title="@string/selection_mode_copy_menu_id"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/selection_mode_cut_menu_id"
            android:icon="@drawable/ic_action_content_cut"
            android:title="@string/selection_mode_cut_menu_id"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/selection_mode_delete_menu_id"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/selection_mode_delete_menu_id"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_select_all"
            android:title="@string/action_select_all" />
        <item
            android:id="@+id/action_select_same_type"
            android:title="@string/action_select_same_type" />
    </group>
    <group android:id="@+id/normal_menu_group">
        <item
            android:id="@+id/search_menu_id"
            android:icon="@drawable/ic_search"
            android:title="@string/search_menu_id"
            android:visible="false"
            app:iconTint="@color/dark_mode_tint"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/bookmark_menu_id"
            android:icon="@drawable/ic_bookmark_24px"
            android:title="@string/bookmark_menu_id"
            app:iconTint="@color/dark_mode_tint"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/sort_menu_id"
            android:icon="@drawable/ic_menu_sortby"
            android:title="@string/sort_menu_id"
            app:iconTint="@color/dark_mode_tint"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/action_sort_by_date"
                    android:title="@string/action_sort_by_date" />
                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/action_sort_by_name" />
                <item
                    android:id="@+id/action_sort_by_size"
                    android:title="@string/action_sort_by_size" />
                <item
                    android:id="@+id/action_sort_by_ascending"
                    android:title="@string/action_sort_by_ascending" />
                <item
                    android:id="@+id/action_sort_by_descending"
                    android:title="@string/action_sort_by_descending" />
            </menu>
        </item>
        <item
            android:id="@+id/close_menu_id"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/close_menu_id"
            app:iconTint="@color/dark_mode_tint"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_remove_empty_folders"
            android:title="@string/action_remove_empty_folders" />
        <item
            android:id="@+id/action_calculate_directory"
            android:title="@string/action_calculate_directory" />
        <item
            android:id="@+id/action_refresh"
            android:title="@string/action_refresh" />
        <!--        <item-->
        <!--            android:id="@+id/action_move_images"-->
        <!--            android:title="序列化文件名" />-->
        <item
            android:id="@+id/action_move_files"
            android:title="@string/action_move_files" />
        <item
            android:id="@+id/action_rename_by_regex"
            android:title="@string/action_rename_by_regex" />
        <item
            android:id="@+id/action_copy_directory_structure"
            android:title="@string/action_copy_directory_structure" />
        <item
            android:id="@+id/action_combine_files"
            android:title="@string/action_combine_files" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings" />
    </group>
</menu>