<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/selection_mode_menu_group"
        android:visible="false">
        <item
            android:id="@+id/selection_mode_cut_menu_id"
            android:icon="@drawable/ic_action_content_cut"
            android:title="Cut"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/selection_mode_delete_menu_id"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/remove"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_select_same_type"
            android:title="Select Same Type" />


    </group>
    <group android:id="@+id/normal_menu_group">
        <item
            android:id="@+id/search_menu_id"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            android:visible="false"
            app:iconTint="@color/dark_mode_tint"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/close_menu_id"
            android:icon="@drawable/btn_close"
            android:title="@string/bookmark_action_bar_close"
            app:iconTint="@color/dark_mode_tint"
            app:showAsAction="ifRoom" />
    </group>

</menu>